# Asteroids

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
